--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.0.0",
+    "heroku": "^7.42.13",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
