--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "express": "^4.17.1",
     "helmet": "^4.0.0",
     "heroku": "^7.42.13",
-    "morgan": "^1.10.0"
+    "knex": "^0.21.5",
+    "morgan": "^1.10.0",
+    "pg": "^8.3.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
