--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "dividend-calculator-api",
   "version": "1.0.0",
   "description": "",
-  "main": "",
+  "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
     "test": "mocha --require test/setup.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate"
   },
   "globals": {
     "supertest": true,
     "expect": true
   },
   "keywords": [],
-  "author": "",
+  "author": "drbretto",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -24,6 +26,7 @@
     "express": "^4.17.1",
     "helmet": "^4.0.0",
     "heroku": "^7.42.13",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
     "morgan": "^1.10.0",
     "pg": "^8.3.3",
