quit while they're all working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
   "cSpell.words": [
+    "Creds",
+    "MSFT",
+    "Passw",
+    "existy",
     "lcrjnv",
-    "rhctdigfswduzo"
+    "minvalue",
+    "rhctdigfswduzo",
+    "setval"
   ]
 }
